--- a/src/behaviors/account-create-behavior.html
+++ b/src/behaviors/account-create-behavior.html
@@ -49,7 +49,8 @@
         var that = this;
         this.$.auth.createUserWithEmailAndPassword(e.detail.username, e.detail.password)
         .then(function(user){
-          that.user=user;
+          console.log(that.user);
+          console.log(user);
           that.saveHome(e.detail.home)
           .then(function(home){
             that.saveHomeIndex()
@@ -61,7 +62,7 @@
                   that.sendEmailVerification()
                   .then(function(ver) {
                     that.fire("openToast",{toastText:"Verification Email sent."});
-                    window.location="/"+that.homeUID+"/default/def-home";
+                    window.location="/"+that.homeUID+"/default/def-verify";
                   })
                 })
               })
